fixed spacing in team page

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,6 +17,5 @@
 .flex-row {
 display: flex;
 flex-direction: row;
-justify-content: center;
 text-align: left;
 }
